@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-04-22T00:29:29Z",
+  "count" : 3,
+  "count_minmax" : [ 3, 3 ],
+  "count_prev_day_inc" : 0,
+  "count_prev_day_dec" : 0,
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 2 ],
+  "uniques_prev_day_inc" : 0,
+  "uniques_prev_day_dec" : 0
+}
