@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-20T08:07:47Z",
+  "timestamp" : "2022-04-22T00:29:29Z",
   "count_outdated" : 276,
   "uniques_outdated" : 53,
-  "count" : 299,
-  "uniques" : 59,
+  "count" : 302,
+  "uniques" : 61,
   "views" : [
     {
       "timestamp": "2022-04-09T00:00:00Z",
@@ -30,6 +30,13 @@
       "timestamp": "2022-04-20T00:00:00Z",
       "count": 12,
       "count_minmax": [ 12, 12 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-04-21T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
