@@ -1,6 +1,6 @@
 {
-  "count": 23,
-  "uniques": 4,
+  "count": 26,
+  "uniques": 5,
   "views": [
     {
       "timestamp": "2022-04-09T00:00:00Z",
@@ -20,6 +20,11 @@
     {
       "timestamp": "2022-04-20T00:00:00Z",
       "count": 12,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2022-04-21T00:00:00Z",
+      "count": 3,
       "uniques": 2
     }
   ]
